--- a/build.gradle
+++ b/build.gradle
@@ -43,8 +43,7 @@ subprojects {
     ext.configurate = "org.spongepowered:configurate-core:${ext.configurateVersion}"
     ext.configurateYaml = "org.spongepowered:configurate-yaml:${ext.configurateVersion}"
     ext.configurateGson = "org.spongepowered:configurate-gson:${ext.configurateVersion}"
-    ext.guice = "com.google.inject:guice:4.2.3"
-    ext.guiceAssistedInject = "com.google.inject.extensions:guice-assistedinject:4.2.3"
+    ext.guice = "com.google.inject:guice:4.2.3:no_aop"
     ext.slf4jVersion = '1.7.30'
     ext.slf4j = "org.slf4j:slf4j-api:${ext.slf4jVersion}"
 }
