--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -20,5 +20,5 @@ shadowJar {
 dependencies {
     implementation project(':shout-common')
     compileOnly 'org.spongepowered:spongeapi:7.2.0'
-    implementation "net.kyori:adventure-platform-spongeapi:${adventureVersion}"
+    implementation "net.kyori:adventure-platform-spongeapi:${adventurePlatformVersion}"
 }
