--- a/velocity/build.gradle
+++ b/velocity/build.gradle
@@ -37,6 +37,6 @@ shadowJar {
 
 dependencies {
     implementation project(':shout-common')
-    compileOnly 'com.velocitypowered:velocity-api:1.1.0-SNAPSHOT'
-    annotationProcessor 'com.velocitypowered:velocity-api:1.1.0-SNAPSHOT'
+    compileOnly 'com.velocitypowered:velocity-api:1.1.5'
+    annotationProcessor 'com.velocitypowered:velocity-api:1.1.5'
 }
